# race-time-tracker

./: .gitignore  DEPLOY.md  LICENSE  NAVOD.md  ONBOARDING.md  README.md  SUPABASE.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  migrations.py  models.py  schemas.py
backend/app/api/: admin.py  auth.py  members.py  races.py  runners.py  strava.py  ws.py
backend/app/auth/: deps.py  email.py  security.py
backend/app/jobs/: scheduler.py
backend/app/services/: calibration.py  darkness.py  route_service.py  weather.py
backend/app/services/history/: base.py  calibrate.py  strava.py
backend/app/services/prediction/: engine.py  fatigue.py  gap.py
backend/app/services/tracking/: base.py  garmin_livetrack.py  matcher.py
backend/scripts/: claim_races.py  migrate_sqlite_to_postgres.py
backend/tests/: e2e_smoke.py  flow_auth_check.py  test_allowlist.py  test_calibrate.py  test_db_url.py  test_engine.py  test_route_service.py  test_security.py  test_strava_filter.py
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/verify/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AidStationEditor.tsx  CheckpointTable.tsx  ProfileChart.tsx  RaceEditForm.tsx  RaceMembersEditor.tsx  RunnerEditForm.tsx  SyncedActivityList.tsx
frontend/lib/: api.ts
