[project]
name = "tracking-backend"
version = "0.1.0"
description = "Race finish time prediction backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "gpxpy>=1.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "astral>=3.2",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
postgres = ["psycopg[binary]>=3.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
